<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_shelf">Sorry, shelfs are empty now....</string>
    <string name="empty_shelf_hint">You can add a new book with a plus button below</string>
    <string name="book">Book</string>
    <string name="name">name</string>
    <string name="author">author</string>
    <string name="book_price">book price</string>
    <string name="order">order</string>
    <string name="required_field">* all fields, excluding Author, are required</string>
    <string name="phone">phone</string>
    <string name="rur">RUR</string>
    <string name="price">Price</string>
    <string name="book_quantity">book quantity</string>
    <string name="pcs">PCS</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="sell">Sell</string>
    <string name="author_hint">Wil I Am</string>
    <string name="name_hint">The Greatest</string>
    <string name="price_hint">295</string>
    <string name="qty_hint">15</string>
    <string name="insert_new_test_book">Insert New Test Book</string>
    <string name="get_book_shelfs_empty">Get book shelfs empty</string>
    <string name="save">save</string>
    <string name="delete_btn">delete</string>
    <string name="amazon">Amazon</string>
    <string name="sam_toyer">Sam Toyer</string>
    <string name="prince_asgard">The Prince of Asgard</string>
    <string name="tel_no">88005555555</string>
    <string name="book_sold">One book was sold</string>
    <string name="no_phone_specified">No phone specified</string>
    <string name="error_required_fields">Required fields are not filled. Quantity and Price cannot be zero</string>
</resources>
