<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/details_main_pad"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book" />


        <LinearLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/book_pad_left">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/author"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <RelativeLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/book_pad_left">

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_quantity"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_quantity_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/pcs" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <RelativeLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/book_pad_left">

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_price"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/rur" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/book_pad_left">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/phone"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_field"
        android:textColor="@color/colorAccent2"
        style="@style/CategoryStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_qty_decrement"
            android:layout_width="@dimen/btn_width"
            android:layout_weight="1"
            android:textSize="@dimen/btn_text_size"
            android:layout_height="wrap_content"
            android:text="-"/>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="@dimen/btn_text_size"
            android:layout_weight="2"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_qty_increment"
            android:layout_width="@dimen/btn_width"
            android:layout_weight="1"
            android:textSize="@dimen/btn_text_size"
            android:layout_height="wrap_content"
            android:text="+"/>

    </LinearLayout>
</LinearLayout>
